feat: substituição de .get para getFirst